# santa-osquery-extension

./: CMakeLists.txt  README.md  santa.cpp  santadecisionstable.cpp  santadecisionstable.h  santarulestable.cpp  santarulestable.h  utils.cpp
python/: README.md  santa_extension.py
